--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
   "description": "积木组件库助力移动端开发",
   "main": "./dist",
   "scripts": {
-    "clean": "rimraf ./dist",
-    "clean:less": "rimraf ./dist/styles/*.less",
-    "clean:demo": "rimraf ./demo",
-    "build": "npm run clean & NODE_ENV=production babel ./src --out-dir ./dist --copy-files && npm run build:less && npm run clean:less",
-    "build:less": "find dist/styles/index.less -exec lessc --clean-css='--s1 --advanced --compatibility=ie8' {} \\; > ./dist/styles/jimu.min.css",
-    "build:js": " ./node_modules/.bin/babel src --copy-files --source-maps --extensions .es6,.es,.jsx,.js --out-dir dist",
-    "buildpage": "npm run clean:demo & NODE_ENV=production webpack -p --config webpack.config.prod.js --progress --colors",
-    "start": "webpack-dev-server --hot --config webpack.config.dev.js",
-    "test": "mocha --compilers js:babel-core/register --recursive -r ignore-styles -r jsdom-global/register",
-    "test:watch": "npm run test -- --watch"
+    "start": "node ./config/devserver.js --env=dev",
+    "devonline": "node ./config/devserver.js --env=online",
+    "staticServer": "./node_modules/.bin/static-server dist",
+    "buildlib": "./node_modules/.bin/webpack -p --config config/webpack.config.dll.js",
+    "build": "rm -rf dist log && npm run buildlib && ./node_modules/.bin/webpack --config config/webpack.config.prod.js --progress --colors --optimize-minimize",
+    "lint": "./node_modules/.bin/eslint 'src/**'"
   },
   "repository": {},
   "keywords": [
@@ -63,7 +59,7 @@
     "file-loader": "^0.8.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "github-markdown-css": "^2.4.1",
-    "history": "^1.17.0",
+    
     "html-webpack-plugin": "^2.14.0",
     "ignore-styles": "^5.0.1",
     "jimu-mobile": "^1.12.1",
@@ -78,6 +74,8 @@
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
+
+    "history": "^1.17.0",
     "react-addons-css-transition-group": "^0.14.7 || ^15.0.0-0 || 15.x",
     "react-addons-test-utils": "^0.14.3 || ^15.0.0-0 || 15.x",
     "react-codemirror": "^0.2.6",
@@ -88,6 +86,8 @@
     "react-router-dom": "^4.1.1",
     "react-split-pane": "^0.1.52",
     "react-tapper": "^0.1.10",
+
+
     "rimraf": "^2.4.3",
     "sinon": "^1.17.2",
     "style-loader": "^0.13.0",
