--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "rimraf": "^2.4.3",
     "sinon": "^1.17.2",
     "style-loader": "^0.13.0",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-loader": "^1.2.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.3.2",
