--- a/example/pwa/manifest.json
+++ b/example/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "滴滴企业级-积木组件APP",
-	"short_name": "积森组件",
+	"short_name": "积木组件",
 	"icons": [
 		{
 		"src": "https://sq9950.github.io/demo/logo.png",
