--- a/demo/manifest.json
+++ b/demo/manifest.json
@@ -9,6 +9,7 @@
 		}
 	],
 	"start_url": "https://sq9950.github.io/demo/index.html",
+	"scope": "/",
 	"display": "standalone",
 	"background_color": "#2196F3",
 	"theme_color": "#2196F3"
