--- a/demo/manifest.json
+++ b/demo/manifest.json
@@ -1,36 +1,15 @@
 {
-  "name": "The Air Horner",
-  "short_name": "Air Horner",
-  "icons": [{
-        "src": "https://airhorner.com/images/touch/Airhorner_128.png",
-        "type": "image/png",
-        "sizes": "128x128"
-      }, {
-        "src": "https://airhorner.com/images/touch/Airhorner_152.png",
-        "type": "image/png",
-        "sizes": "152x152"
-      }, {
-        "src": "https://airhorner.com/images/touch/Airhorner_144.png",
-        "type": "image/png",
-        "sizes": "144x144"
-      }, {
-        "src": "https://airhorner.com/images/touch/Airhorner_192.png",
-        "type": "image/png",
-        "sizes": "192x192"
-      },
-      {
-        "src": "https://airhorner.com/images/touch/Airhorner_256.png",
-        "type": "image/png",
-        "sizes": "256x256"
-      },
-      {
-        "src": "https://airhorner.com/images/touch/Airhorner_512.png",
-        "type": "image/png",
-        "sizes": "512x512"
-      }],
-  "start_url": "/?homescreen=1",
-  "scope": "/",
-  "display": "standalone",
-  "background_color": "#2196F3",
-  "theme_color": "#2196F3"
+	"name": "滴滴企业级-积木组件APP",
+	"short_name": "积木组件",
+	"icons": [
+		{
+		"src": "https://sq9950.github.io/demo/logo.png",
+		"sizes": "256x256",
+		"type": "image/png"
+		}
+	],
+	"start_url": "https://sq9950.github.io/demo/index.html",
+	"display": "standalone",
+	"background_color": "#f0f0f0",
+	"theme_color": "#f0f0f0"
 }
