--- a/demo/manifest.json
+++ b/demo/manifest.json
@@ -10,6 +10,6 @@
 	],
 	"start_url": "https://sq9950.github.io/demo/index.html",
 	"display": "standalone",
-	"background_color": "#f0f0f0",
-	"theme_color": "#f0f0f0"
+	"background_color": "#F0F0F0",
+	"theme_color": "#F0F0F0"
 }
