--- a/demo/manifest.json
+++ b/demo/manifest.json
@@ -10,6 +10,6 @@
 	],
 	"start_url": "https://sq9950.github.io/demo/index.html",
 	"display": "standalone",
-	"background_color": "#2196F3",
-	"theme_color": "#2196F3"
+	"background_color": "#0F826B",
+	"theme_color": "#F44432"
 }
